# sales-inventory-backend

./: .gitignore  Cargo.toml  README.md  env.example
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-05-23-160837_create_roles/: up.sql
migrations/2023-05-23-161237_create_users/: up.sql
migrations/2023-05-24-060821_create_product_types/: down.sql  up.sql
migrations/2023-05-24-060949_create_products/: up.sql
migrations/2023-05-24-061743_create_inventories/: down.sql  up.sql
migrations/2023-05-24-062120_create_order_details/: down.sql  up.sql
migrations/2023-05-24-062256_create_orders/: up.sql
src/: schema.rs
