[package]
name = "sales-inventory-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
lru_time_cache = "0.11.11"
serde = "1.0.140"
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
